--- a/less/team-page.less
+++ b/less/team-page.less
@@ -11,15 +11,12 @@ body{
 } //head end
 
 .logo{
-   // border:2px solid black;
-   // border-radius: 30%;
-   // float:right;
-   // width:8%;
-   // margin-right:5%;
+   
    border-radius: 30%;
     float:right;
-    width:8%;
+    width:6%;
     margin-right:5%;
+    margin-top:0.5%;
 
     @media @mobile{
         width:20%;
@@ -37,7 +34,7 @@ body{
     margin:2%;
 
     @media @mobile{
-        border:2px solid green;
+        
         width:100%;
         margin:0;
 
@@ -67,26 +64,24 @@ body{
         }
     
         h3{
-            border:2px solid purple;
+            
             margin:5%;
         }
     
         p{
-            border:2px solid red;
+            
             margin:3%;
         }
     
         button{
-            border:2px solid blue;
+            
             margin-bottom:3%;
         }
     
     
     
     .jasmine-img{
-        width:40%;
-        border-radius:50%;
-        height: 250px;
+        .team-img();
 
     } //jasmine img end
 
@@ -114,17 +109,17 @@ body{
         }
     
         h3{
-            border:2px solid purple;
+            
             margin:5%;
         }
     
         p{
-            border:2px solid red;
+            
             margin:3%;
         }
     
         button{
-            border:2px solid blue;
+            
             margin-bottom:3%;
         }
     
@@ -157,17 +152,17 @@ body{
         }
     
         h3{
-            border:2px solid purple;
+            
             margin:5%;
         }
     
         p{
-            border:2px solid red;
+            
             margin:3%;
         }
     
         button{
-            border:2px solid blue;
+           
             margin-bottom:3%;
         }
     
@@ -199,17 +194,17 @@ body{
         }
     
         h3{
-            border:2px solid purple;
+            
             margin:5%;
         }
     
         p{
-            border:2px solid red;
+            
             margin:3%;
         }
     
         button{
-            border:2px solid blue;
+            
             margin-bottom:3%;
         }
     
@@ -241,17 +236,17 @@ body{
         }
     
         h3{
-            border:2px solid purple;
+            
             margin:5%;
         }
     
         p{
-            border:2px solid red;
+            
             margin:3%;
         }
     
         button{
-            border:2px solid blue;
+            
             margin-bottom:3%;
         }
     
