--- a/less/home-page.less
+++ b/less/home-page.less
@@ -19,8 +19,10 @@
 .logo{
     border-radius: 30%;
     float:right;
-    width:8%;
+    width:7%;
     margin-right:5%;
+    margin-top:0.5%;
+    margin-bottom:0.5%;
 
     @media @mobile{
         width:30%;
@@ -202,6 +204,7 @@ width:50%;
     width:100%;
     font-size: 3rem;
     text-align: center;
+    margin:3%;
     
 
     @media @mobile{
@@ -209,6 +212,7 @@ width:50%;
         padding:0;
         font-size: 2rem;
         border:2px dashed gray;
+        margin:0;
 
     }//team page link mobile end
     } //team link end
