--- a/less/global.less
+++ b/less/global.less
@@ -5,8 +5,7 @@
     max-width:100%;
   }
   
-  #container {
-    max-width: 100%;
+
     
     p{
 
@@ -14,8 +13,7 @@
 
         @media @mobile{
             line-height: normal;
-    } //p mobile query end
-}
+    } //p mobile query end}
   }
 
   html{
