--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,7 +9,6 @@ nav{
     padding:3%;
 
     @media @mobile{
-        dislpay:block;
         font-size:1.5rem;
         width: 90%;
         float: right;
@@ -23,8 +22,8 @@ nav{
 
         @media @mobile{
             width:100%;
-            margin-left:3.0%;
-            margin-right:0.5%;
+            margin-left:3%;
+            margin-right:0;
             
             
             
