--- a/less/team-page.less
+++ b/less/team-page.less
@@ -1,13 +1,13 @@
 
 
-body{
-    border:2px solid blue;
-    
+
+#team-container{
+    background: linear-gradient(232deg, #d7dde1, #e3c8c4, #d6eaea);
 }
 
 .team-head{
     width:100%;
-    background-color: rgb(235, 234, 234);
+   
 } //head end
 
 .logo{
@@ -211,7 +211,7 @@ body{
 
 
     .kerri-ann-img{
-    width: 48%;
+    .team-img();
     } //kerri-ann img end
 }//kerri-ann content end
 } //keri-ann div end
@@ -284,5 +284,5 @@ button{
 
 .team-foot{
     width:100%;
-    background-color: rgb(235, 234, 234);
+    
 }//team foot end
