--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,14 +1,22 @@
 
+#container{
+
+.home-back();
+ 
+
+}
+
+
 
 .head{
 
     width:100%;
-    background-color: rgb(235, 234, 234);
-    position:fixed;
-    display:block;
+   // background-color: rgb(235, 234, 234);
+    //position:fixed;
+    //display:block;
 
     @media @mobile{
-       
+        border:2px solid blue;
         display: flex;
         .layout(space-between, center);
         position:absolute;
@@ -19,10 +27,8 @@
 .logo{
     border-radius: 30%;
     float:right;
-    width:7%;
+    width:8%;
     margin-right:5%;
-    margin-top:0.5%;
-    margin-bottom:0.5%;
 
     @media @mobile{
         width:30%;
@@ -38,7 +44,7 @@
     background-size: cover;
     width:100%;
     height: 70vh;
-    margin-top:5%;
+    //margin-top:5%;
 
     @media @mobile{
         height: 33vh;
@@ -204,7 +210,6 @@ width:50%;
     width:100%;
     font-size: 3rem;
     text-align: center;
-    margin:3%;
     
 
     @media @mobile{
@@ -212,7 +217,6 @@ width:50%;
         padding:0;
         font-size: 2rem;
         border:2px dashed gray;
-        margin:0;
 
     }//team page link mobile end
     } //team link end
