fonts styling both pages done. MVP goals complete

--- a/less/global.less
+++ b/less/global.less
@@ -25,12 +25,14 @@
       color: #C12E29;
       font-size: 12rem;
       text-align: center;
+      font-family: 'Sedgwick Ave', cursive;
 
   }
 
   h2{
       color: @titles-color;
       font-size:@titles-size;
+      font-family: @titles-font;
       margin-bottom:5%;
       margin-top:3%;
   }
