--- a/less/mixins.less
+++ b/less/mixins.less
@@ -27,7 +27,7 @@
 } //mobile query styling
 
 .team-content(){
-    border:2px solid black;
+    border:2px dotted #C3BEB2;
         width:90%;
         margin:5%;
         text-align: center;
