--- a/less/team-page.less
+++ b/less/team-page.less
@@ -7,6 +7,9 @@
 
 .team-head{
     width:100%;
+
+   
+    
    
 } //head end
 
@@ -35,8 +38,8 @@
 
     @media @mobile{
         
-        width:100%;
-        margin:0;
+        width:95%;
+        margin-top:5%;
 
     }//header mobile query end
 } //header end
@@ -46,6 +49,7 @@
     .layout(space-evenly, center);
     flex-direction: column;
     .team-layout();
+    font-family: @team-font;
 
   
 
@@ -59,9 +63,7 @@
 
         .team-content();
 
-        h2{
-            border:2px solid green;
-        }
+       
     
         h3{
             
@@ -93,6 +95,7 @@
     .layout(space-between, center);
     flex-direction: column;
     .team-layout();
+    font-family: @team-font;
 
     @media @mobile{
         width:100%;
@@ -104,9 +107,7 @@
 
         .team-content();
 
-        h2{
-            border:2px solid green;
-        }
+       
     
         h3{
             
@@ -136,6 +137,7 @@
     .layout(space-evenly, center);
     flex-direction: column;
     .team-layout();
+    font-family: @team-font;
 
     @media @mobile{
         width:100%;
@@ -147,9 +149,7 @@
 
         .team-content();
 
-        h2{
-            border:2px solid green;
-        }
+        
     
         h3{
             
@@ -178,6 +178,7 @@
     .layout(space-evenly, center);
     flex-direction: column;
     .team-layout();
+    font-family: @team-font;
 
     @media @mobile{
         width:100%;
@@ -189,9 +190,7 @@
     .kerri-ann-content{
         .team-content();
 
-        h2{
-            border:2px solid green;
-        }
+       
     
         h3{
             
@@ -221,6 +220,7 @@
     .layout(space-evenly, center);
     flex-direction: column;
     .team-layout();
+    font-family: @team-font;
 
     @media @mobile{
         width:100%;
@@ -231,9 +231,7 @@
     .brian-content{
         .team-content();
 
-        h2{
-            border:2px solid green;
-        }
+        
     
         h3{
             
