--- a/less/variables.less
+++ b/less/variables.less
@@ -5,16 +5,16 @@
 
 @titles-color: #81B3B2; //h2 color
 @titles-size: 7.5rem;   //h2 size
-//h2 font style
+@titles-font: 'Baloo Bhaijaan', cursive; //h2 font style
 
 
 @text-color:rgb(14, 60, 146); //main font color
 @text-size: 3.0rem; //main font size
-//main font style
+@text-font: 'Gaegu', cursive;  //main font style
 
 @team-color: #C12E29; //main text on team page
 @team-size: 4.0rem; //main text on team page
-//team page font style
+@team-font: 'Kavivanar', cursive;//team page font style
 
 @team-main: #81B325; //h3 color
 //h3 font style
