--- a/css/index.css
+++ b/css/index.css
@@ -188,10 +188,12 @@ h1 {
   color: #C12E29;
   font-size: 12rem;
   text-align: center;
+  font-family: 'Sedgwick Ave', cursive;
 }
 h2 {
   color: #81B3B2;
   font-size: 7.5rem;
+  font-family: 'Baloo Bhaijaan', cursive;
   margin-bottom: 5%;
   margin-top: 3%;
 }
@@ -221,7 +223,8 @@ nav {
 @media (max-width:500px) {
   nav {
     font-size: 1.5rem;
-    width: 90%;
+    width: 100%;
+    height: 25px;
     float: right;
     padding: 0;
   }
@@ -229,6 +232,8 @@ nav {
 nav a {
   margin-left: 7%;
   margin-right: 7%;
+  font-family: 'Vibes', cursive;
+  text-decoration-line: none;
 }
 @media (max-width:500px) {
   nav a {
@@ -270,11 +275,12 @@ nav a {
 }
 @media (max-width:500px) {
   .head {
-    border: 2px solid blue;
     display: flex;
     justify-content: space-between;
     align-content: center;
     position: absolute;
+    background: linear-gradient(232deg, #d7dde1, #e3c8c4, #d6eaea);
+    height: 45px;
   }
 }
 .head .logo {
@@ -320,6 +326,7 @@ nav a {
   line-height: 2;
   color: #0e3c92;
   font-size: 3rem;
+  font-family: 'Gaegu', cursive;
 }
 .intro .intro-img {
   border-radius: 20%;
@@ -353,8 +360,10 @@ nav a {
 }
 .video .video-text {
   line-height: normal;
-  width: 30%;
+  width: 70%;
   color: #0e3c92;
+  font-family: 'Gaegu', cursive;
+  font-size: 2rem;
 }
 @media (max-width:500px) {
   .video .video-text {
@@ -408,6 +417,7 @@ nav a {
   line-height: 2;
   color: #0e3c92;
   font-size: 3rem;
+  font-family: 'Gaegu', cursive;
 }
 @media (max-width:500px) {
   .body .body-text {
@@ -445,6 +455,14 @@ nav a {
   font-size: 3rem;
   text-align: center;
 }
+.help .team-link a {
+  text-decoration-line: none;
+  margin-bottom: 5%;
+  font-family: 'Sedgwick Ave Display', cursive;
+}
+.help .team-link a:hover {
+  color: #252A33;
+}
 @media (max-width:500px) {
   .help .team-link {
     margin-top: 3%;
@@ -478,8 +496,8 @@ nav a {
 }
 @media (max-width:500px) {
   .header {
-    width: 100%;
-    margin: 0;
+    width: 95%;
+    margin-top: 5%;
   }
 }
 .jasmine {
@@ -490,6 +508,7 @@ nav a {
   width: 80%;
   justify-content: center;
   margin: 0 auto;
+  font-family: 'Kavivanar', cursive;
 }
 @media (max-width:500px) {
   .jasmine {
@@ -497,7 +516,7 @@ nav a {
   }
 }
 .jasmine .jasmine-content {
-  border: 2px solid black;
+  border: 2px dotted #C3BEB2;
   width: 90%;
   margin: 5%;
   text-align: center;
@@ -511,9 +530,6 @@ nav a {
 }
 .jasmine .jasmine-content button {
   border: 2px solid black;
-}
-.jasmine .jasmine-content h2 {
-  border: 2px solid green;
 }
 .jasmine .jasmine-content h3 {
   margin: 5%;
@@ -536,6 +552,7 @@ nav a {
   width: 80%;
   justify-content: center;
   margin: 0 auto;
+  font-family: 'Kavivanar', cursive;
 }
 @media (max-width:500px) {
   .bao {
@@ -543,7 +560,7 @@ nav a {
   }
 }
 .bao .bao-content {
-  border: 2px solid black;
+  border: 2px dotted #C3BEB2;
   width: 90%;
   margin: 5%;
   text-align: center;
@@ -557,9 +574,6 @@ nav a {
 }
 .bao .bao-content button {
   border: 2px solid black;
-}
-.bao .bao-content h2 {
-  border: 2px solid green;
 }
 .bao .bao-content h3 {
   margin: 5%;
@@ -582,6 +596,7 @@ nav a {
   width: 80%;
   justify-content: center;
   margin: 0 auto;
+  font-family: 'Kavivanar', cursive;
 }
 @media (max-width:500px) {
   .heather {
@@ -589,7 +604,7 @@ nav a {
   }
 }
 .heather .heather-content {
-  border: 2px solid black;
+  border: 2px dotted #C3BEB2;
   width: 90%;
   margin: 5%;
   text-align: center;
@@ -603,9 +618,6 @@ nav a {
 }
 .heather .heather-content button {
   border: 2px solid black;
-}
-.heather .heather-content h2 {
-  border: 2px solid green;
 }
 .heather .heather-content h3 {
   margin: 5%;
@@ -628,6 +640,7 @@ nav a {
   width: 80%;
   justify-content: center;
   margin: 0 auto;
+  font-family: 'Kavivanar', cursive;
 }
 @media (max-width:500px) {
   .kerri-ann {
@@ -635,7 +648,7 @@ nav a {
   }
 }
 .kerri-ann .kerri-ann-content {
-  border: 2px solid black;
+  border: 2px dotted #C3BEB2;
   width: 90%;
   margin: 5%;
   text-align: center;
@@ -649,9 +662,6 @@ nav a {
 }
 .kerri-ann .kerri-ann-content button {
   border: 2px solid black;
-}
-.kerri-ann .kerri-ann-content h2 {
-  border: 2px solid green;
 }
 .kerri-ann .kerri-ann-content h3 {
   margin: 5%;
@@ -674,6 +684,7 @@ nav a {
   width: 80%;
   justify-content: center;
   margin: 0 auto;
+  font-family: 'Kavivanar', cursive;
 }
 @media (max-width:500px) {
   .brian {
@@ -681,7 +692,7 @@ nav a {
   }
 }
 .brian .brian-content {
-  border: 2px solid black;
+  border: 2px dotted #C3BEB2;
   width: 90%;
   margin: 5%;
   text-align: center;
@@ -695,9 +706,6 @@ nav a {
 }
 .brian .brian-content button {
   border: 2px solid black;
-}
-.brian .brian-content h2 {
-  border: 2px solid green;
 }
 .brian .brian-content h3 {
   margin: 5%;
@@ -754,6 +762,7 @@ footer {
     padding: 0;
     width: 100%;
     margin: 0;
+    background: linear-gradient(232deg, #d7dde1, #e3c8c4, #d6eaea);
   }
   footer .footer-nav nav {
     font-size: 1.5rem;
