--- a/less/footer.less
+++ b/less/footer.less
@@ -26,6 +26,7 @@ footer{
            padding:0;
            width:100%;
            margin:0;
+           background: linear-gradient(232deg, #d7dde1, #e3c8c4, #d6eaea);
    
            nav {
             
