--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,15 +10,20 @@ nav{
 
     @media @mobile{
         font-size:1.5rem;
-        width: 90%;
+        width: 100%;
+        height: 25px;
         float: right;
         padding:0;
+
     }//nav mobile query end
     
     a{
         
         margin-left:7%;
         margin-right:7%;
+        font-family:'Vibes', cursive;
+        text-decoration-line: none;
+        
 
         @media @mobile{
             width:100%;
@@ -50,6 +55,7 @@ nav{
         width: 100%;
         margin-bottom:0;
         height:40px;
+        
 
         a{
             width:100%;
