button animation home page added

--- a/less/footer.less
+++ b/less/footer.less
@@ -25,8 +25,9 @@ footer{
            font-size:1.5rem;
            padding:0;
            width:100%;
-           margin:0;
+           
            background: linear-gradient(232deg, #d7dde1, #e3c8c4, #d6eaea);
+           height:90px;
    
            nav {
             
@@ -35,12 +36,14 @@ footer{
                height:50px;
                float: right;
                padding:5%;
+               margin-top:5%;
            }
    
          .logo-bottom { 
     border-radius: 30%;
        float:left;
        width:20%;
+       margin-top:1%;
    
       
            } //logo bottom end
