--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@-webkit-keyframes AnimationName {
+@-webkit-keyframes backAni {
   0% {
     background-position: 91% 0%;
   }
@@ -9,7 +9,7 @@
     background-position: 91% 0%;
   }
 }
-@keyframes AnimationName {
+@keyframes backAni {
   0% {
     background-position: 91% 0%;
   }
@@ -18,28 +18,6 @@
   }
   100% {
     background-position: 91% 0%;
-  }
-}
-@keyframes colorchange {
-  0% {
-    background: #d7dde1;
-  }
-  50% {
-    background: #D4AEA8;
-  }
-  100% {
-    background: orchid;
-  }
-}
-@-webkit-keyframes colorchange {
-  0% {
-    background: #d7dde1;
-  }
-  50% {
-    background: #D4AEA8;
-  }
-  100% {
-    background: orchid;
   }
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -201,15 +179,11 @@ h3 {
   font-size: 5rem;
   color: #81B325;
 }
-button {
-  width: 50%;
-  background-color: #D4AEA8;
-  color: #000000;
-  font-size: 2rem;
-  border-radius: 50%;
-  height: 60px;
-  animation: colorchange 5s infinite;
-  -webkit-animation: colorchange 5s infinite;
+h4 {
+  font-size: 3rem;
+  font-family: 'Kavivanar', cursive;
+  color: #81B3B2;
+  font-size: 7.5rem;
 }
 nav {
   width: 80%;
@@ -226,7 +200,7 @@ nav {
     width: 100%;
     height: 25px;
     float: right;
-    padding: 0;
+    padding: 3%;
   }
 }
 nav a {
@@ -267,8 +241,8 @@ nav a {
 #container {
   background: linear-gradient(232deg, #d7dde1, #e3c8c4, #d6eaea);
   background-size: 600% 600%;
-  -webkit-animation: AnimationName 20s ease infinite;
-  animation: AnimationName 20s ease infinite;
+  -webkit-animation: backAni 20s ease infinite;
+  animation: backAni 20s ease infinite;
 }
 .head {
   width: 100%;
@@ -315,6 +289,7 @@ nav a {
     flex-direction: column;
     width: 100%;
     margin: 0 auto;
+    text-align: center;
   }
 }
 .intro .intro-text {
@@ -343,7 +318,6 @@ nav a {
   }
 }
 .video {
-  border: 2px solid green;
   display: flex;
   justify-content: space-between;
   align-content: center;
@@ -360,25 +334,31 @@ nav a {
 }
 .video .video-text {
   line-height: normal;
-  width: 70%;
+  width: 80%;
   color: #0e3c92;
   font-family: 'Gaegu', cursive;
   font-size: 2rem;
+  margin-bottom: 3%;
+  border: 2px dotted #E0bE12;
+  padding: 3%;
 }
 @media (max-width:500px) {
   .video .video-text {
     width: 100%;
-    margin: 0, auto;
+    margin-top: 5%;
+    margin-bottom: 2%;
+    padding: 0;
   }
 }
 .video .youtube {
-  width: 45%;
-  margin: 0;
+  width: 100%;
+  margin: 0 auto;
+  border: 2px solid green;
 }
 @media (max-width:500px) {
   .video .youtube {
     width: 100%;
-    margin: 0, auto;
+    border-bottom: 2px dashed gray;
   }
 }
 .body {
@@ -392,6 +372,7 @@ nav a {
     flex-direction: column-reverse;
     width: 100%;
     margin: 0 auto;
+    text-align: center;
   }
 }
 .body .body-img {
@@ -424,17 +405,26 @@ nav a {
     line-height: normal;
   }
 }
-.bottom-img {
-  width: 90%;
-  height: 50vh;
-  margin-left: 5%;
-  margin-right: 5%;
-  border-radius: 3%;
+.body .story-btn button {
+  border: none;
+  background: #8Ca744;
+  color: #ffffff !important;
+  font-weight: 100;
+  padding: 20px;
+  text-transform: uppercase;
+  border-radius: 6px;
+  display: inline-block;
+  transition: all 0.3s ease 0s;
+  font-size: 2rem;
 }
-@media (max-width:500px) {
-  .bottom-img {
-    display: none;
-  }
+.body .story-btn button:hover {
+  color: #404040 !important;
+  font-weight: 700 !important;
+  letter-spacing: 3px;
+  background: none;
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(3, 3, 3, 0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  transition: all 0.3s ease 0s;
 }
 .help {
   width: 100%;
@@ -447,8 +437,15 @@ nav a {
   }
 }
 .help ul {
-  line-height: 2;
-  width: 50%;
+  line-height: 3;
+  width: 90%;
+  border: 2px solid #8CA744;
+  text-decoration-line: none;
+  height: 200px;
+  margin: 5%;
+}
+.help ul li {
+  margin-left: 5%;
 }
 .help .team-link {
   width: 100%;
@@ -761,8 +758,8 @@ footer {
     font-size: 1.5rem;
     padding: 0;
     width: 100%;
-    margin: 0;
     background: linear-gradient(232deg, #d7dde1, #e3c8c4, #d6eaea);
+    height: 90px;
   }
   footer .footer-nav nav {
     font-size: 1.5rem;
@@ -770,10 +767,12 @@ footer {
     height: 50px;
     float: right;
     padding: 5%;
+    margin-top: 5%;
   }
   footer .footer-nav .logo-bottom {
     border-radius: 30%;
     float: left;
     width: 20%;
+    margin-top: 1%;
   }
 }
