--- a/less/global.less
+++ b/less/global.less
@@ -43,8 +43,11 @@
   }
   
 
-button{
-    .btn-style();
+h4{
+    font-size: 3rem;
+    font-family: 'Kavivanar', cursive;
+    color: @titles-color;
+      font-size:@titles-size;
 }
   
 
