--- a/less/navigation.less
+++ b/less/navigation.less
@@ -13,7 +13,7 @@ nav{
         width: 100%;
         height: 25px;
         float: right;
-        padding:0;
+        padding:3%;
 
     }//nav mobile query end
     
@@ -55,6 +55,7 @@ nav{
         width: 100%;
         margin-bottom:0;
         height:40px;
+        
         
 
         a{
