button animation/color change

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -43,7 +43,7 @@
 .home-back(){
 
 
-    background: linear-gradient(232deg, #d7dde1, #e3c8c4, #d6eaea);
+    background: linear-gradient(232deg, #e3e9ec, #eedfdc, #dfebeb);
 background-size: 600% 600%;
 
 -webkit-animation: backAni 20s ease infinite;
