--- a/css/index.css
+++ b/css/index.css
@@ -239,7 +239,7 @@ nav a {
   }
 }
 #container {
-  background: linear-gradient(232deg, #d7dde1, #e3c8c4, #d6eaea);
+  background: linear-gradient(232deg, #e3e9ec, #eedfdc, #dfebeb);
   background-size: 600% 600%;
   -webkit-animation: backAni 20s ease infinite;
   animation: backAni 20s ease infinite;
@@ -319,12 +319,13 @@ nav a {
 }
 .video {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-content: center;
   margin: 5%;
   width: 90%;
   flex-direction: column;
   flex-wrap: wrap;
+  border: 2px solid blue;
 }
 @media (max-width:500px) {
   .video {
@@ -338,7 +339,7 @@ nav a {
   color: #0e3c92;
   font-family: 'Gaegu', cursive;
   font-size: 2rem;
-  margin-bottom: 3%;
+  margin: 0 auto;
   border: 2px dotted #E0bE12;
   padding: 3%;
 }
@@ -351,7 +352,7 @@ nav a {
   }
 }
 .video .youtube {
-  width: 100%;
+  width: 90%;
   margin: 0 auto;
   border: 2px solid green;
 }
