--- a/less/home-page.less
+++ b/less/home-page.less
@@ -95,11 +95,12 @@ margin:5%;
 
 .video{
    
-    .layout(space-between, center);
+    .layout(space-evenly, center);
     margin:5%;
     width:90%;
     flex-direction: column;
     flex-wrap: wrap;
+    border: 2px solid blue;
 
     @media @mobile{
         width:100%;
@@ -113,7 +114,7 @@ margin:5%;
         color: @text-color;
         font-family: @text-font;
         font-size: 2rem;
-        margin-bottom:3%;
+        margin:0 auto;
         border:2px dotted #E0bE12;
         padding:3%;
 
@@ -129,9 +130,10 @@ margin:5%;
     }//video text end
 
     .youtube{
-        width:100%;
+        width:90%;
         margin:0 auto;
         border:2px solid green;
+        
         
 
         @media @mobile{
