--- a/less/mixins.less
+++ b/less/mixins.less
@@ -68,8 +68,8 @@ animation: backAni 20s ease infinite;
 
 .btn-style(){
 
-        border: none;
-        background: #8Ca744;
+        border: 1px dotted dimgray ;
+        background: none;
         color: #ffffff !important;
         font-weight: 100;
         padding: 20px;
@@ -81,7 +81,7 @@ animation: backAni 20s ease infinite;
         
         
         &:hover {
-            color: #404040 !important;
+            color: #b12727 !important;
             font-weight: 700 !important;
             letter-spacing: 3px;
             background: none;
