--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,6 +7,8 @@ nav{
     height: 60px;
     text-align: center;
     padding:3%;
+    
+    
 
     @media @mobile{
         font-size:1.5rem;
@@ -23,6 +25,8 @@ nav{
         margin-right:7%;
         font-family:'Vibes', cursive;
         text-decoration-line: none;
+        color: #8CA744;
+        font-weight: 600;
         
 
         @media @mobile{
