--- a/less/global.less
+++ b/less/global.less
@@ -13,6 +13,7 @@
 
         @media @mobile{
             line-height: normal;
+            font-size: 2rem;
     } //p mobile query end}
   }
 
@@ -27,7 +28,11 @@
       text-align: center;
       font-family: 'Sedgwick Ave', cursive;
 
-  }
+      @media @mobile{
+          font-size: 8rem;
+      }//h1 mobile end
+
+  } //h1 end
 
   h2{
       color: @titles-color;
@@ -35,12 +40,23 @@
       font-family: @titles-font;
       margin-bottom:5%;
       margin-top:3%;
-  }
+      text-align: center;
+
+      @media @mobile{
+        font-size: 5rem;
+
+    }//h2 mobile end
+  }//h2 end
 
   h3{
-      font-size: 5.0rem;
+      font-size: 5rem;
       color: @team-main;
-  }
+      text-align: center;
+
+      @media @mobile{
+          font-size: 3rem;
+      }//h3 mobile end
+  }//h3 end
   
 
 h4{
@@ -48,6 +64,10 @@ h4{
     font-family: 'Kavivanar', cursive;
     color: @titles-color;
       font-size:@titles-size;
+
+      @media @mobile{
+        font-size: 4rem;
+    }//h4 mobile end
 }
   
 
