--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,9 +11,7 @@
 .head{
 
     width:100%;
-   // background-color: rgb(235, 234, 234);
-    //position:fixed;
-    //display:block;
+  
 
     @media @mobile{
         
@@ -43,9 +41,10 @@
 
 .banner-img{
    // border: 2px solid black;
-    background-size: cover;
+    background-size: contain;
     width:100%;
-    height: 70vh;
+    height: 66vh;
+    border-radius:2%;
     //margin-top:5%;
 
     @media @mobile{
@@ -57,9 +56,10 @@
 
 
 .intro{
-//border: 2px solid blue;
+width:80%;
 .layout(space-evenly, center);
 margin:5%;
+
 
 @media @mobile{
     
@@ -96,16 +96,18 @@ margin:5%;
 .video{
    
     .layout(space-evenly, center);
-    margin:5%;
-    width:90%;
+    margin-left:8%;
+    width:80%;
     flex-direction: column;
     flex-wrap: wrap;
-    border: 2px solid blue;
+    border:2px dotted #E0bE12;
+    margin-bottom: 3%;
+    
 
     @media @mobile{
         width:100%;
         margin:0;
-        
+        border:none;
     }//mobile video div end
 
     .video-text{
@@ -114,32 +116,32 @@ margin:5%;
         color: @text-color;
         font-family: @text-font;
         font-size: 2rem;
-        margin:0 auto;
-        border:2px dotted #E0bE12;
+        margin-left:15%;
+        text-align: center;
+        
         padding:3%;
 
         @media @mobile{
             width:100%;
-            margin-top:5%;
-    
-            margin-bottom: 2%;
-            padding:0;
+            margin:0;
             
         } //mobile video text end
         
     }//video text end
 
     .youtube{
-        width:90%;
-        margin:0 auto;
-        border:2px solid green;
+        width:80%;
+        margin-top:5%;
+        margin-bottom:2%;
+        margin-left:30%;
         
         
+    
 
         @media @mobile{
         width:100%;
-        //margin:0, auto;
-        border-bottom: 2px dashed gray;
+        margin-left:0;
+        
 
         }//mobile youtube video end
     } //youtube video end
@@ -150,6 +152,7 @@ margin:5%;
    // border:2px solid purple;
     .layout(space-evenly, center);
     margin:5%;
+    width:80%;
 
     @media @mobile{
         
@@ -182,6 +185,8 @@ margin:5%;
 
       @media @mobile{
           line-height: normal;
+          
+          
    
       }//body-text mobile end
   } //body-text end
@@ -189,6 +194,14 @@ margin:5%;
 
   .story-btn button{
     .btn-style();
+    
+
+
+    @media @mobile{
+        margin-bottom: 5%;
+        
+    }
+    
 }
 
 
@@ -199,27 +212,43 @@ margin:5%;
 
 .help{
 
-    width:100%;
+    width:90%;
     font-size: 2.0rem;
-    margin:0;
+    margin-left:2%;
+    margin-top:3%;
     
 
     @media @mobile {
         width:100%;
+        margin:0;
         
 
 }//help mobile end
+
+h4{
+    margin-left:5%;
+
+    @media @mobile{
+        margin-top:5%;
+    }
+}
      
 ul{
 line-height: 3;
-width:90%;
-border:2px solid #8CA744;
-text-decoration-line: none;
+width:80%;
+border:2px dashed gray;
 height:200px;
 margin:5%;
+text-align: center;
+
+@media @mobile{
+    line-height:normal;
+    height: 100px;
+    margin:10%;
+}//help div mobile end
 
 li{
-    
+    text-decoration: none;
     margin-left:5%;
 }
 
@@ -231,11 +260,15 @@ li{
     width:100%;
     font-size: 3rem;
     text-align: center;
+
+    @media @mobile{
+        margin:0;
+    }
     
 
     a{
     text-decoration-line: none;
-    margin-bottom:5%;
+    //margin-bottom:5%;
     font-family:'Sedgwick Ave Display', cursive;
 
     &:hover{
