--- a/less/variables.less
+++ b/less/variables.less
@@ -8,9 +8,9 @@
 @titles-font: 'Baloo Bhaijaan', cursive; //h2 font style
 
 
-@text-color:rgb(14, 60, 146); //main font color
+@text-color:#252A33; //main font color
 @text-size: 3.0rem; //main font size
-@text-font: 'Gaegu', cursive;  //main font style
+@text-font: 'Athiti', sans-serif;  //main font style
 
 @team-color: #C12E29; //main text on team page
 @team-size: 4.0rem; //main text on team page
