--- a/less/mixins.less
+++ b/less/mixins.less
@@ -68,7 +68,7 @@ animation: backAni 20s ease infinite;
 
 .btn-style(){
 
-        border: 1px dotted dimgray ;
+        border:2px dotted #D4AEA8 ;
         background: none;
         color: #ffffff !important;
         font-weight: 100;
