--- a/less/variables.less
+++ b/less/variables.less
@@ -12,7 +12,7 @@
 @text-size: 3.0rem; //main font size
 @text-font: 'Athiti', sans-serif;  //main font style
 
-@team-color: #C12E29; //main text on team page
+@team-color: #252A33; //main text on team page
 @team-size: 4.0rem; //main text on team page
 @team-font: 'Kavivanar', cursive;//team page font style
 
