--- a/css/index.css
+++ b/css/index.css
@@ -182,6 +182,11 @@ h2 {
   margin-top: 3%;
   text-align: center;
 }
+@media (max-width: 800px) and (min-width: 501px) {
+  h2 {
+    font-size: 6rem;
+  }
+}
 @media (max-width:500px) {
   h2 {
     font-size: 5rem;
@@ -208,6 +213,17 @@ h4 {
     font-size: 4rem;
   }
 }
+h5 {
+  font-size: 3rem;
+  font-family: 'Baloo Bhaijaan';
+  color: #252A33;
+}
+@media (max-width:500px) {
+  h5 {
+    font-size: 2rem;
+    text-align: center;
+  }
+}
 nav {
   width: 80%;
   display: inline-block;
@@ -216,6 +232,11 @@ nav {
   height: 60px;
   text-align: center;
   padding: 3%;
+}
+@media (max-width: 800px) and (min-width: 501px) {
+  nav {
+    width: 100%;
+  }
 }
 @media (max-width:500px) {
   nav {
@@ -233,6 +254,12 @@ nav a {
   text-decoration-line: none;
   color: #8CA744;
   font-weight: 600;
+}
+@media (max-width: 800px) and (min-width: 501px) {
+  nav a {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
 }
 @media (max-width:500px) {
   nav a {
@@ -263,6 +290,12 @@ nav a {
     margin-bottom: 0;
   }
 }
+@media (max-width:500px) and (max-width: 800px) and (min-width: 501px) {
+  .team-nav a {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+}
 #container {
   background: linear-gradient(232deg, #e3e9ec, #eedfdc, #dfebeb);
   background-size: 600% 600%;
@@ -271,6 +304,13 @@ nav a {
 }
 .head {
   width: 100%;
+}
+@media (max-width: 800px) and (min-width: 501px) {
+  .head {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+  }
 }
 @media (max-width:500px) {
   .head {
@@ -288,6 +328,11 @@ nav a {
   width: 8%;
   margin-right: 5%;
 }
+@media (max-width: 800px) and (min-width: 501px) {
+  .head .logo {
+    width: 40%;
+  }
+}
 @media (max-width:500px) {
   .head .logo {
     width: 30%;
@@ -298,6 +343,12 @@ nav a {
   width: 100%;
   height: 66vh;
   border-radius: 2%;
+}
+@media (max-width: 800px) and (min-width: 501px) {
+  .banner-img {
+    height: 40vh;
+    border-radius: none;
+  }
 }
 @media (max-width:500px) {
   .banner-img {
@@ -310,6 +361,11 @@ nav a {
   justify-content: space-evenly;
   align-content: center;
   margin: 5%;
+}
+@media (max-width: 800px) and (min-width: 501px) {
+  .intro {
+    width: 90%;
+  }
 }
 @media (max-width:500px) {
   .intro {
@@ -330,11 +386,26 @@ nav a {
   font-size: 3rem;
   font-family: 'Athiti', sans-serif;
 }
+@media (max-width: 800px) and (min-width: 501px) {
+  .intro .intro-text {
+    padding: none;
+    line-height: normal;
+  }
+}
 .intro .intro-img {
   border-radius: 20%;
   width: 45%;
   height: 550px;
   margin-top: 10%;
+}
+@media (max-width: 800px) and (min-width: 501px) {
+  .intro .intro-img {
+    padding: none;
+    border-radius: none;
+    width: 55%;
+    height: 550px;
+    margin-top: 30%;
+  }
 }
 @media (max-width:500px) {
   .intro .intro-img {
@@ -352,8 +423,8 @@ nav a {
   width: 80%;
   flex-direction: column;
   flex-wrap: wrap;
-  border: 2px dotted #E0bE12;
   margin-bottom: 3%;
+  margin-top: 2%;
 }
 @media (max-width:500px) {
   .video {
@@ -372,6 +443,14 @@ nav a {
   text-align: center;
   padding: 3%;
 }
+@media (max-width: 800px) and (min-width: 501px) {
+  .video .video-text {
+    width: 100%;
+    margin-left: 5%;
+    padding: none;
+    line-height: normal;
+  }
+}
 @media (max-width:500px) {
   .video .video-text {
     width: 100%;
@@ -383,6 +462,11 @@ nav a {
   margin-top: 5%;
   margin-bottom: 2%;
   margin-left: 30%;
+}
+@media (max-width: 800px) and (min-width: 501px) {
+  .video .youtube {
+    margin-left: 15%;
+  }
 }
 @media (max-width:500px) {
   .video .youtube {
@@ -411,6 +495,15 @@ nav a {
   height: 550px;
   margin-top: 10%;
 }
+@media (max-width: 800px) and (min-width: 501px) {
+  .body .body-img {
+    padding: none;
+    border-radius: none;
+    width: 50%;
+    height: 550px;
+    margin-top: 30%;
+  }
+}
 @media (max-width:500px) {
   .body .body-img {
     width: 90%;
@@ -430,13 +523,21 @@ nav a {
   font-size: 3rem;
   font-family: 'Athiti', sans-serif;
 }
+@media (max-width: 800px) and (min-width: 501px) {
+  .body .body-text {
+    padding: 0;
+    line-height: normal;
+    width: 50%;
+    margin-left: 5%;
+  }
+}
 @media (max-width:500px) {
   .body .body-text {
     line-height: normal;
   }
 }
 .body .story-btn button {
-  border: 1px dotted dimgray ;
+  border: 2px dotted #D4AEA8;
   background: none;
   color: #ffffff !important;
   font-weight: 100;
@@ -579,7 +680,7 @@ nav a {
   margin: 5%;
 }
 .jasmine .jasmine-content p {
-  color: #C12E29;
+  color: #252A33;
   font-size: 4rem;
 }
 .jasmine .jasmine-content button {
@@ -590,6 +691,11 @@ nav a {
 }
 .jasmine .jasmine-content p {
   margin: 3%;
+}
+@media (max-width:500px) {
+  .jasmine .jasmine-content p {
+    font-size: 3rem;
+  }
 }
 @media (max-width:500px) {
   .jasmine .jasmine-content p {
@@ -628,7 +734,7 @@ nav a {
   margin: 5%;
 }
 .bao .bao-content p {
-  color: #C12E29;
+  color: #252A33;
   font-size: 4rem;
 }
 .bao .bao-content button {
@@ -639,6 +745,11 @@ nav a {
 }
 .bao .bao-content p {
   margin: 3%;
+}
+@media (max-width:500px) {
+  .bao .bao-content p {
+    font-size: 3rem;
+  }
 }
 @media (max-width:500px) {
   .bao .bao-content p {
@@ -677,7 +788,7 @@ nav a {
   margin: 5%;
 }
 .heather .heather-content p {
-  color: #C12E29;
+  color: #252A33;
   font-size: 4rem;
 }
 .heather .heather-content button {
@@ -688,6 +799,11 @@ nav a {
 }
 .heather .heather-content p {
   margin: 3%;
+}
+@media (max-width:500px) {
+  .heather .heather-content p {
+    font-size: 3rem;
+  }
 }
 @media (max-width:500px) {
   .heather .heather-content p {
@@ -726,7 +842,7 @@ nav a {
   margin: 5%;
 }
 .kerri-ann .kerri-ann-content p {
-  color: #C12E29;
+  color: #252A33;
   font-size: 4rem;
 }
 .kerri-ann .kerri-ann-content button {
@@ -737,6 +853,11 @@ nav a {
 }
 .kerri-ann .kerri-ann-content p {
   margin: 3%;
+}
+@media (max-width:500px) {
+  .kerri-ann .kerri-ann-content p {
+    font-size: 3rem;
+  }
 }
 @media (max-width:500px) {
   .kerri-ann .kerri-ann-content p {
@@ -762,6 +883,11 @@ nav a {
 }
 @media (max-width:500px) {
   .brian {
+    font-size: 3rem;
+  }
+}
+@media (max-width:500px) {
+  .brian {
     width: 100%;
   }
 }
@@ -775,7 +901,7 @@ nav a {
   margin: 5%;
 }
 .brian .brian-content p {
-  color: #C12E29;
+  color: #252A33;
   font-size: 4rem;
 }
 .brian .brian-content button {
@@ -806,7 +932,7 @@ nav a {
   margin: 5%;
 }
 .team-content p {
-  color: #C12E29;
+  color: #252A33;
   font-size: 4rem;
 }
 .team-content button {
