--- a/less/global.less
+++ b/less/global.less
@@ -42,6 +42,10 @@
       margin-top:3%;
       text-align: center;
 
+      @media @tablet{
+          font-size:6rem;
+      }
+
       @media @mobile{
         font-size: 5rem;
 
@@ -71,5 +75,14 @@ h4{
 }
   
 
+h5{
+    font-size: 3rem;
+    font-family: 'Baloo Bhaijaan';
+    color: @team-color;
 
+    @media @mobile{
+        font-size:2rem;
+        text-align:center;
+    }//h5 mobile end
+}
 
