--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,6 +8,11 @@ nav{
     text-align: center;
     padding:3%;
     
+@media @tablet{
+    width:100%;
+    
+}//tablet nav end
+
     
 
     @media @mobile{
@@ -27,6 +32,11 @@ nav{
         text-decoration-line: none;
         color: #8CA744;
         font-weight: 600;
+
+        @media @tablet{
+            margin-left:5%;
+            margin-right:5%;
+        }//tablet nav links end
         
 
         @media @mobile{
@@ -53,6 +63,7 @@ nav{
     
     
     
+    
 
     @media @mobile{
         font-size:2.0rem;
@@ -67,6 +78,11 @@ nav{
             margin-left:3%;
             margin-right:3%;
             margin-bottom:0;
+
+            @media @tablet{
+                margin-left:5%;
+                margin-right:5%;
+            }//tablet team nav links end
         }
     }//nav mobile query end
 } //nav on team page end
