--- a/less/team-page.less
+++ b/less/team-page.less
@@ -58,8 +58,11 @@
         }
     
         p{
-            
-            margin:3%;
+              margin:3%;
+
+              @media @mobile{
+                font-size: 3rem;
+            } //jasmine tablet p end
 
             @media @mobile{
                 font-size: 2rem;
@@ -108,6 +111,10 @@
          margin:3%;
 
          @media @mobile{
+            font-size: 3rem;
+        } //bao tablet p end
+
+         @media @mobile{
             font-size: 2rem;
         } //bao mobile p end
 
@@ -150,8 +157,11 @@
         }
     
         p{
-            
-            margin:3%;
+             margin:3%;
+
+            @media @mobile{
+                font-size: 3rem;
+            } //heather tablet p end
 
             @media @mobile{
                 font-size: 2rem;
@@ -194,8 +204,11 @@
         }
     
         p{
-            
             margin:3%;
+
+            @media @mobile{
+                font-size: 3rem;
+            } //kerri-ann tablet p end
 
             @media @mobile{
                 font-size: 2rem;
@@ -221,6 +234,11 @@
     flex-direction: column;
     .team-layout();
     font-family: @team-font;
+
+
+    @media @mobile{
+        font-size: 3rem;
+    } //brian tablet p end
 
     @media @mobile{
         width:100%;
