--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,6 @@
-@tablet: ~ "(max-width: 800px) and (min-width: 501px)";//tablet media query
+@tablet: ~ "(max-width: 800px) and (min-width: 501px)" ;//tablet media query
 
-@mobile: ~ "(max-width:500px)"; //phone media query
+@mobile: ~ "(max-width: 500px) and (min-width: 0px)"; //phone media query
 
 
 @titles-color: #81B3B2; //h2 color
