--- a/css.index/index.css
+++ b/css.index/index.css
@@ -154,7 +154,7 @@ table {
   padding: 0;
   max-width: 100%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   p {
     line-height: normal;
     font-size: 2rem;
@@ -169,7 +169,7 @@ h1 {
   text-align: center;
   font-family: 'Sedgwick Ave', cursive;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   h1 {
     font-size: 8rem;
   }
@@ -187,7 +187,7 @@ h2 {
     font-size: 6rem;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   h2 {
     font-size: 5rem;
   }
@@ -197,7 +197,7 @@ h3 {
   color: #81B325;
   text-align: center;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   h3 {
     font-size: 3rem;
   }
@@ -208,7 +208,7 @@ h4 {
   color: #81B3B2;
   font-size: 7.5rem;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   h4 {
     font-size: 4rem;
   }
@@ -218,7 +218,7 @@ h5 {
   font-family: 'Baloo Bhaijaan';
   color: #252A33;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   h5 {
     font-size: 2rem;
     text-align: center;
@@ -233,13 +233,18 @@ nav {
   text-align: center;
   padding: 3%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width: 800px) and (min-width: 501px) {
+  nav {
+    width: 100%;
+  }
+}
+@media (max-width:500px and min-width: 0px) {
   nav {
     font-size: 1.5rem;
     width: 100%;
     height: 25px;
     float: right;
-    padding: 2%;
+    padding: 3%;
   }
 }
 nav a {
@@ -252,14 +257,14 @@ nav a {
 }
 @media (max-width: 800px) and (min-width: 501px) {
   nav a {
-    margin-left: 2%;
-    margin-right: 2%;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   nav a {
     width: 100%;
-    margin-left: 2%;
+    margin-left: 3%;
     margin-right: 0;
   }
 }
@@ -271,7 +276,7 @@ nav a {
   height: 60px;
   text-align: center;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .team-nav {
     font-size: 2rem;
     width: 100%;
@@ -285,7 +290,7 @@ nav a {
     margin-bottom: 0;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) and (max-width: 800px) and (min-width: 501px) {
+@media (max-width:500px and min-width: 0px) and (max-width: 800px) and (min-width: 501px) {
   .team-nav a {
     margin-left: 5%;
     margin-right: 5%;
@@ -307,7 +312,7 @@ nav a {
     align-content: center;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .head {
     display: flex;
     justify-content: space-between;
@@ -328,7 +333,7 @@ nav a {
     width: 40%;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .head .logo {
     width: 30%;
   }
@@ -345,7 +350,7 @@ nav a {
     border-radius: none;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .banner-img {
     height: 33vh;
   }
@@ -362,7 +367,7 @@ nav a {
     width: 90%;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .intro {
     flex-direction: column;
     width: 100%;
@@ -399,10 +404,10 @@ nav a {
     border-radius: none;
     width: 55%;
     height: 550px;
-    margin-top: 40%;
+    margin-top: 30%;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .intro .intro-img {
     width: 90%;
     margin: 0 auto;
@@ -419,9 +424,9 @@ nav a {
   flex-direction: column;
   flex-wrap: wrap;
   margin-bottom: 3%;
-  margin-top: 3%;
+  margin-top: 2%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .video {
     width: 100%;
     margin: 0;
@@ -437,7 +442,6 @@ nav a {
   margin-left: 15%;
   text-align: center;
   padding: 3%;
-  margin-top: 3%;
 }
 @media (max-width: 800px) and (min-width: 501px) {
   .video .video-text {
@@ -447,7 +451,7 @@ nav a {
     line-height: normal;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .video .video-text {
     width: 100%;
     margin: 0;
@@ -461,10 +465,10 @@ nav a {
 }
 @media (max-width: 800px) and (min-width: 501px) {
   .video .youtube {
-    margin-left: 10%;
+    margin-left: 15%;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .video .youtube {
     width: 100%;
     margin-left: 0;
@@ -477,7 +481,7 @@ nav a {
   margin: 5%;
   width: 80%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .body {
     flex-direction: column-reverse;
     width: 100%;
@@ -500,7 +504,7 @@ nav a {
     margin-top: 30%;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .body .body-img {
     width: 90%;
     margin: 0 auto;
@@ -527,7 +531,7 @@ nav a {
     margin-left: 5%;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .body .body-text {
     line-height: normal;
   }
@@ -553,7 +557,7 @@ nav a {
   -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
   transition: all 0.3s ease 0s;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .body .story-btn button {
     margin-bottom: 5%;
   }
@@ -564,7 +568,7 @@ nav a {
   margin-left: 2%;
   margin-top: 3%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .help {
     width: 100%;
     margin: 0;
@@ -573,7 +577,7 @@ nav a {
 .help h4 {
   margin-left: 5%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .help h4 {
     margin-top: 5%;
   }
@@ -586,7 +590,7 @@ nav a {
   margin: 5%;
   text-align: center;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .help ul {
     line-height: normal;
     height: 100px;
@@ -602,7 +606,7 @@ nav a {
   font-size: 3rem;
   text-align: center;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .help .team-link {
     margin: 0;
   }
@@ -614,7 +618,7 @@ nav a {
 .help .team-link a:hover {
   color: #252A33;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .help .team-link {
     margin-top: 3%;
     padding: 0;
@@ -635,7 +639,7 @@ nav a {
   margin-right: 5%;
   margin-top: 0.5%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .logo {
     width: 20%;
   }
@@ -645,7 +649,7 @@ nav a {
   text-align: center;
   margin: 2%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .header {
     width: 95%;
     margin-top: 5%;
@@ -653,7 +657,7 @@ nav a {
 }
 .jasmine {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-content: center;
   flex-direction: column;
   width: 80%;
@@ -661,13 +665,12 @@ nav a {
   margin: 0 auto;
   font-family: 'Kavivanar', cursive;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .jasmine {
     width: 100%;
   }
 }
 .jasmine .jasmine-content {
-  width: 60%;
   border: 2px dotted #C3BEB2;
   width: 90%;
   margin: 5%;
@@ -680,21 +683,27 @@ nav a {
   color: #252A33;
   font-size: 4rem;
 }
+.jasmine .jasmine-content button {
+  border: 2px solid black;
+}
 .jasmine .jasmine-content h3 {
   margin: 5%;
 }
 .jasmine .jasmine-content p {
   margin: 3%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .jasmine .jasmine-content p {
     font-size: 3rem;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .jasmine .jasmine-content p {
     font-size: 2rem;
   }
+}
+.jasmine .jasmine-content button {
+  margin-bottom: 3%;
 }
 .jasmine .jasmine-content .jasmine-img {
   border-radius: 50%;
@@ -710,7 +719,7 @@ nav a {
   margin: 0 auto;
   font-family: 'Kavivanar', cursive;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .bao {
     width: 100%;
   }
@@ -728,21 +737,27 @@ nav a {
   color: #252A33;
   font-size: 4rem;
 }
+.bao .bao-content button {
+  border: 2px solid black;
+}
 .bao .bao-content h3 {
   margin: 5%;
 }
 .bao .bao-content p {
   margin: 3%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .bao .bao-content p {
     font-size: 3rem;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .bao .bao-content p {
     font-size: 2rem;
   }
+}
+.bao .bao-content button {
+  margin-bottom: 3%;
 }
 .bao .bao-content .bao-img {
   border-radius: 50%;
@@ -758,7 +773,7 @@ nav a {
   margin: 0 auto;
   font-family: 'Kavivanar', cursive;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .heather {
     width: 100%;
   }
@@ -776,21 +791,27 @@ nav a {
   color: #252A33;
   font-size: 4rem;
 }
+.heather .heather-content button {
+  border: 2px solid black;
+}
 .heather .heather-content h3 {
   margin: 5%;
 }
 .heather .heather-content p {
   margin: 3%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .heather .heather-content p {
     font-size: 3rem;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .heather .heather-content p {
     font-size: 2rem;
   }
+}
+.heather .heather-content button {
+  margin-bottom: 3%;
 }
 .heather .heather-content .heather-img {
   border-radius: 50%;
@@ -806,7 +827,7 @@ nav a {
   margin: 0 auto;
   font-family: 'Kavivanar', cursive;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .kerri-ann {
     width: 100%;
   }
@@ -824,21 +845,27 @@ nav a {
   color: #252A33;
   font-size: 4rem;
 }
+.kerri-ann .kerri-ann-content button {
+  border: 2px solid black;
+}
 .kerri-ann .kerri-ann-content h3 {
   margin: 5%;
 }
 .kerri-ann .kerri-ann-content p {
   margin: 3%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .kerri-ann .kerri-ann-content p {
     font-size: 3rem;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .kerri-ann .kerri-ann-content p {
     font-size: 2rem;
   }
+}
+.kerri-ann .kerri-ann-content button {
+  margin-bottom: 3%;
 }
 .kerri-ann .kerri-ann-content .kerri-ann-img {
   border-radius: 50%;
@@ -854,12 +881,12 @@ nav a {
   margin: 0 auto;
   font-family: 'Kavivanar', cursive;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .brian {
     font-size: 3rem;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .brian {
     width: 100%;
   }
@@ -877,16 +904,22 @@ nav a {
   color: #252A33;
   font-size: 4rem;
 }
+.brian .brian-content button {
+  border: 2px solid black;
+}
 .brian .brian-content h3 {
   margin: 5%;
 }
 .brian .brian-content p {
   margin: 3%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   .brian .brian-content p {
     font-size: 2rem;
   }
+}
+.brian .brian-content button {
+  margin-bottom: 3%;
 }
 .brian .brian-content .brian-img {
   border-radius: 50%;
@@ -902,13 +935,13 @@ nav a {
   color: #252A33;
   font-size: 4rem;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+.team-content button {
+  border: 2px solid black;
+}
+@media (max-width:500px and min-width: 0px) {
   .team-foot {
     display: none;
   }
-}
-.buttons {
-  border: 2px solid green;
 }
 footer {
   display: flex;
@@ -917,7 +950,7 @@ footer {
   width: 90%;
   margin: 5%;
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   footer {
     width: 100%;
     margin: 0;
@@ -930,7 +963,7 @@ footer {
     display: none !important;
   }
 }
-@media (max-width: 500px) and (min-width: 0px) {
+@media (max-width:500px and min-width: 0px) {
   footer .footer-nav {
     font-size: 1.5rem;
     padding: 0;
